syntax = "proto3";

package auth;

service AuthService {
    rpc GetAuthToken (GetAuthTokenPayload) returns (AuthToken) {}
    rpc VerifyToken (VerifyTokenPayload) returns (VerifyTokenResponse) {}
}

message GetAuthTokenPayload {
    string userId = 1;
    string email = 2;
}

message AuthToken {
    string accessToken = 1;
    string refreshToken = 2;
}

message VerifyTokenPayload {
    string accessToken = 1;
}

message VerifyTokenResponse {
    bool isValid = 1;
    GetAuthTokenPayload getAuthTokenPayload = 2;
}
